--- a/07-chat/public/index.html
+++ b/07-chat/public/index.html
@@ -27,14 +27,12 @@
 				</div>
 
 				<div class="mb-3">
-					<select class="form-select" id="room">
-						<option value="general">General</option>
-						<option value="major">Major</option>
-						<option value="sergant">Sergant</option>
+					<select class="form-select" id="room" required>
+						<option selected>Loading...</option>
 					</select>
 				</div>
 
-				<button type="submit" class="btn btn-primary">Connect!</button>
+				<button type="submit" id="connectBtn" class="btn btn-primary" disabled>Connect!</button>
 			</form><!-- /#username-form -->
 		</div><!-- /#start -->
 
